Added NCCL and NVSHMEM notebooks

--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
@@ -144,6 +144,8 @@
     "\n",
     "Now, let's parallelize our code across multiple GPUs by using `cudaSetDevice` and `cudaMemcpyAsync` operations. Open the [jacobi_memcpy.cu](../../source_code/cuda/jacobi_memcpy.cu) file.\n",
     "\n",
+    "Alternatively, you can navigate to `CFD/English/C/source_code/cuda/` directory in Jupyter's file browser in the left pane. Then, click to open the `jacobi_memcpy.cu` file. \n",
+    "\n",
     "Understand the flow of the program from within the `main` function. Review the following pre-Jacobi-computation steps:\n",
     "\n",
     "1. Computation of the memory chunk size to be allocated on each GPU stored in the `chunk_size` integer array.\n",
