--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "In this section, we will optimize the parallel [RDF](../serial/rdf_overview.ipynb) application using OpenMP offloading. Before we begin, feel free to have a look at the parallel version of the code and inspect it once again. \n",
     "\n",
-    "[RDF Parallel Code](../../source_code/openmp/SOLUTION/rdf_offload_split.cpp)\n",
+    "[RDF Parallel Code](../../source_code/openmp/SOLUTION/rdf_offload.cpp)\n",
     "\n",
     "[File Reader](../../source_code/openmp/SOLUTION/dcdread.h)\n",
     "\n",
@@ -133,7 +133,7 @@
     "\n",
     "<img src=\"../images/openmp_feedback_offload_split.png\">\n",
     "\n",
-    "Make sure to validate the output by running the executable and validate the output."
+    "Now, validate the output by running the executable, and then **Profile** your code with Nsight Systems command line `nsys`."
    ]
   },
   {
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure to validate the output by running the executable and validate the output."
+    "Now, validate the output by running the executable, and then **Profile** your code with Nsight Systems command line `nsys`."
    ]
   },
   {
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure to validate the output by running the executable and validate the output."
+    "Now, validate the output by running the executable, and then **Profile** your code with Nsight Systems command line `nsys`."
    ]
   },
   {
@@ -425,7 +425,7 @@
     "\n",
     "<img src=\"../images/openmp_collapse_baseline.png\">\n",
     "\n",
-    "Dots with the yellow outline is the optimized version using `collapse` clause and the ones with the blue outline is the base version.\n",
+    "Dots with the blue outline is the optimized version using `collapse` clause and the ones with the yellow outline is the base version.\n",
     "\n",
     "Lets checkout the *Occupancy* section. Occupancy is the ratio of the number of active warps per multiprocessor to the maximum number of possible active warps. As seen in the below screenshot, the theoretical occupancy is 65% and the achieved occupancy is 58%. The plot showing the impact of varying register count per thread indicates that by reducing the number of registers per thread, we can increase the warp occupancy. \n",
     "\n",
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure to validate the output by running the executable and validate the output."
+    "Now, validate the output by running the executable, and then **Profile** your code with Nsight Systems command line `nsys`."
    ]
   },
   {
@@ -587,7 +587,7 @@
     "\n",
     "## Licensing \n",
     "\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0). "
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
    ]
   }
  ],
