--- a/hpc/nways/nways_labs/profiler/English/jupyter_notebook/nsight_systems.ipynb
+++ b/hpc/nways/nways_labs/profiler/English/jupyter_notebook/nsight_systems.ipynb
@@ -197,7 +197,7 @@
     "\n",
     "## Licensing \n",
     "\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0). "
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
    ]
   }
  ],
@@ -222,5 +222,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
