--- a/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab3.ipynb
+++ b/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab3.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "Now, add `collapse` clause to the code and make necessary changes to the loop directives. Once done, save the file, re-compile via `make`, and profile it again. \n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.f90` and `Makefile` from the current directory at `Fortran/source_code/lab3` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Click on the <b>[miniWeather_openacc.f90](../source_code/lab3/miniWeather_openacc.f90)</b> and <b>[Makefile](../source_code/lab3/Makefile)</b> links and modify `miniWeather_openacc.f90` and `Makefile`. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -215,7 +215,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
