--- a/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/cupy/cupy_RDF.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/cupy/cupy_RDF.ipynb
@@ -174,7 +174,8 @@
     "    d_x = cp.asarray(d_x)\n",
     "    d_y = cp.asarray(d_y)\n",
     "    d_z = cp.asarray(d_z)\n",
-    "    d_g2 = cp.zeros(sizebin, dtype=cp.int64)\n",
+    "    d_g2 = np.zeros(sizebin, dtype=np.int64)\n",
+    "    d_g2 = cp.asarray(d_g2)\n",
     "\n",
     "    ############################## RAW KERNEL #################################################\n",
     "    nthreads = 128;\n",
@@ -301,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
