--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab2.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab2.ipynb
@@ -280,7 +280,7 @@
     "\n",
     "In order to build our example code without CUDA managed memory we need to give the compiler more information about the arrays. How do our two loop nests use the arrays `A` and `Anew`? The `calcNext` function take `A` as input and generates `Anew` as output, but also needs Anew copied in because we need to maintain that *hot* boundary at the top. So you will want to add a `copyin` clause for `A` and a `copy` clause for `Anew` on your region. The `swap` function takes `Anew` as input and `A` as output, so it needs the exact opposite data clauses. It's also necessary to tell the compiler the size of the two arrays by using array shaping. Our arrays are `m` times `n` in size, so we'll tell the compiler their shape starts at `0` and has `n*m` elements, using the syntax above. Go ahead and add data clauses to the two `parallel loop` directives in `laplace2d.c`.\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab2` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
+    "Click on the <b>[laplace2d.c](../source_code/lab2/laplace2d.c)</b> link and modify `laplace2d.c`. Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
     "Then try to build again."
    ]
@@ -447,7 +447,7 @@
     "\n",
     "Add a structured data directive to the code to properly handle the arrays `A` and `Anew`. We've already added data clauses to our two functions, so this time we'll move up the calltree and add a structured data region around our while loop in the main program. Think about the input and output to this while loop and choose your data clauses for `A` and `Anew` accordingly.\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `jacobi.c` from the current directory at `C/source_code/lab2` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
+    "Click on the <b>[jacobi.c](../source_code/lab2/jacobi.c)</b> link and modify `jacobi.c`. Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
     "Then, run the following script to check you solution. You code should run just as good as (or slightly better) than our managed memory code."
    ]
@@ -654,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -668,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
