--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
@@ -158,9 +158,7 @@
    "source": [
     "#### Implementing the Collapse Clause\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab3` directory. Use the **collapse clause** to collapse our multi-dimensional loops into a single dimensional loop.\n",
-    "\n",
-    "Remember to **SAVE** your code after changes, before running below cells.\n",
+    "Click on the <b>[laplace2d.c](../source_code/lab3/laplace2d.c)</b> link and modify `laplace2d.c`. Use the **collapse clause** to collapse our multi-dimensional loops into a single dimensional loop. Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
     "Then run the following script to see how the code runs."
    ]
@@ -281,7 +279,7 @@
    "source": [
     "#### Implementing the Tile Clause\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab3` directory. Replace the `collapse` clause with the `tile` clause to break our multi-dimensional loops into smaller tiles. Try using a variety of different tile sizes, but for now keep one of the dimensions as a **multiple of 32**. We will talk later about why this is important.\n",
+    "Click on the <b>[laplace2d.c](../source_code/lab3/laplace2d.c)</b> link and modify `laplace2d.c`. Replace the `collapse` clause with the `tile` clause to break our multi-dimensional loops into smaller tiles. Try using a variety of different tile sizes, but for now keep one of the dimensions as a **multiple of 32**. We will talk later about why this is important.\n",
     "\n",
     "Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
@@ -389,7 +387,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -403,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
