--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Start_Here.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Start_Here.ipynb
@@ -94,7 +94,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
